Add project boxes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <h1>Fake Company LLC</h1>
        <nav>
            <ul>
-               <li><a href="#Portofolio">Portofolio</a></li>
+               <li><a href="#portofolio">Portofolio</a></li>
                <li><a href="#about">About</a></li>
                <li><a href="#contact">Contact</a></li>
            </ul>
@@ -23,17 +23,24 @@
             <h2>Our Projects</h2>
             <div class="projects">
                 <div class="project">
-                    <h1>Skyscraper</h1>
+                    <h3>Skyscraper</h3>
                     <img src="resources\images\dylann-hendricks-VzACw1Xs8N4-unsplash.jpg" alt="Skyscraper">
                 </div>
                 <div class="project">
-                    project 2
+                    <h3>Cinema</h3>
+                    <img src="resources\images\myke-simon-atsUqIm3wxo-unsplash.jpg" alt="Cinema">
                 </div>
                 <div class="project">
-                    project 3
+                    <h3>Yacht</h3>
+                    <img src="resources\images\viktor-ritsvall-FWJinfDsIn8-unsplash.jpg" alt="Yacht">
                 </div>
                 <div class="project">
-                    project 4
+                    <h3>Bridge</h3>
+                    <img src="resources\images\cody-hiscox-Hp5Acad1H0k-unsplash.jpg" alt="Bridge">
+                </div>
+                <div class="project">
+                    <h3>Museum</h3>
+                    <img src="resources\images\dannie-jing-3GZlhROZIQg-unsplash.jpg" alt="Museum">
                 </div>
             </div>
         </section>
