Finish project (kind of)

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fake Company LLC</title>
     <link rel="stylesheet" href="resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Mega" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
        <h1>Fake Company LLC</h1>
        <nav>
            <ul>
-               <li><a href="#portofolio">Portofolio</a></li>
-               <li><a href="#about">About</a></li>
-               <li><a href="#contact">Contact</a></li>
+               <li><a href="#portofolio">Projects</a></li> /
+               <li><a href="#team">Team</a></li>
            </ul>
        </nav>
     </header>
@@ -44,9 +44,26 @@
                 </div>
             </div>
         </section>
-
-        <section id="about"></section>
-        <section id="contact"></section>
+        <section id="team">
+            <h2>Our Team</h2>
+            <div class="team">
+              <div class="teammate">
+                <img src="https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/img/employee-one.jpg" alt="Lisa Fischer"/>
+                <h3>Lisa Fischer</h3>
+                <p>C.E.O. - Founder and Principal Investor</p>
+              </div>
+              <div class="teammate">
+                <img src="https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/img/employee-two.jpg" alt="Alex Lasker"/>
+                <h3>Alex Lasker</h3>
+                <p>Partner - Research & Development</p>
+              </div>
+              <div class="teammate">
+                <img src="https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/img/employee-three.jpg" alt="Omar Carlsen"/>
+                <h3>Omar Carlsen</h3>
+                <p>Partner - Partnerships & Marketing</p>
+              </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
